modify mountebank template